--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -74,16 +74,14 @@
 				<div class="navbar-nav w-100">
 					<a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
 					<div class="nav-item dropdown">
-						<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa-solid fa-people-arrows me-2"></i>會員相關</a>
+						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa-solid fa-people-arrows me-2"></i>會員相關</a>
 						<div class="dropdown-menu bg-transparent border-0">
-							<a class="nav-link scrollto">會員管理</a>
+							<a asp-area="backend" asp-controller="MemberManagement" asp-action="Index" class="nav-link scrollto">會員管理</a>
 							<a href="element.html" class="nav-link scrollto">訂單管理</a>
 							<a asp-area="backend" asp-controller="ReservationManagement" asp-action="Index" class="nav-link scrollto">訂位管理</a>
 						</div>
 					</div>
-					<a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
-					<a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-					<a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
+					<a asp-area="backend" asp-controller="Product" asp-action="Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>產品管理</a>
 					<a asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>員工管理</a>
 					<div class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Login</a>
