--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/Success.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/Success.cshtml
@@ -1,5 +1,12 @@
 ﻿@section Styles{
     <link href="~/css/reservations.css" rel="stylesheet" />
+    <style>
+        #bookConfirmInformation {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 }
 
 <!-- d-flex align-items-center -->
