--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -100,17 +100,18 @@ textarea {
     border: 0px;
 }
 
- .datepicker input {
-    height: 21px;
-    font-weight: 400;
-    line-height: 1.5;
-    display: block;
-   /* padding: .375rem 2.25rem .375rem .75rem;*/
-    border-radius: 0;
-    box-shadow: none;
-    background: #0c0b09;
-    border-color: #625b4b;
-}
+    .datepicker input {
+        height: 21px;
+        font-weight: 400;
+        line-height: 1.5;
+        display: block;
+        /* padding: .375rem 2.25rem .375rem .75rem;*/
+        border-radius: 0;
+        box-shadow: none;
+        background: #0c0b09;
+        border-color: #625b4b;
+        color: #625b4b;
+    }
 
 div #d1 {
     margin-top:10px;
